crates/macros/tests/slang/fail/no_from_newtype.stderr
error[E0308]: mismatched types
  --> tests/slang/fail/no_from_newtype.rs:12:27
   |
12 |     let h = Hotness::from(Float::from(98.6f32));
   |             ------------- ^^^^^^^^^^^^^^^^^^^^ expected `Hotness`, found `Float`
   |             |
   |             arguments to this function are incorrect
   |
note: associated function defined here
  --> $RUST/core/src/convert/mod.rs
   |
   |     fn from(value: T) -> Self;
   |        ^^^^
help: try wrapping the expression in `Hotness`
   |
12 |     let h = Hotness::from(Hotness(Float::from(98.6f32)));
   |                           ++++++++                    +
